--- a/.config/i3/config
+++ b/.config/i3/config
@@ -22,7 +22,7 @@ bindsym $super+d exec rofi -lines 12 -padding 18 -width 60 -location 0 -show dru
 
 # common apps keybinds
 bindsym Print exec scrot 'Cheese_%a-%d%b%y_%H.%M.png' -e 'viewnior ~/$f'
-bindsym $super+l exec i3lock -i ~/.wallpaper.png
+bindsym $super+l exec i3lock -i ~/.Pictures/Wallpapers/.wallpaper.png
 bindsym $super+Shift+w exec google-chrome-stable
 bindsym $super+Shift+f exec nautilus
 bindsym $super+Shift+g exec gedit
