--- a/.config/i3/config
+++ b/.config/i3/config
@@ -28,7 +28,7 @@ bindsym Print exec scrot 'Cheese_%a-%d%b%y_%H.%M.png' -e 'viewnior ~/$f'
 bindsym $super+l exec i3lock -i ~/.Pictures/Wallpapers/.wallpaper.png
 bindsym $super+Shift+w exec google-chrome-stable
 bindsym $super+Shift+f exec nautilus
-bindsym $super+Shift+g exec gedit
+bindsym $super+Shift+g exec mousepad
 bindsym $super+x exec scrcpy --fullscreen
 
 #Brightness Control
@@ -37,7 +37,7 @@ bindsym XF86MonBrightnessDown exec xbacklight -5
 #change volume
 bindsym XF86AudioRaiseVolume exec amixer -q set Master 5%+
 bindsym XF86AudioLowerVolume exec amixer -q set Master 5%-
-bindsym XF86AudioMute exec amixer set Master toggle
+bindsym XF86AudioMute exec pactl set-sink-mute 0 toggle
 
 # music control
 bindsym XF86AudioNext exec mpc next
