--- a/.config/i3/config
+++ b/.config/i3/config
@@ -15,6 +15,7 @@ exec --no-startup-id compton -b
 exec --no-startup-id nm-applet
 exec --no-startup-id numlockx on
 exec --no-startup-id flameshot
+exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 & eval $(gnome-keyring-daemon -s --components=pkcs11,secrets,ssh,gpg)
 
 # start a terminal
 bindsym $super+Return exec i3-sensible-terminal
@@ -24,16 +25,17 @@ bindsym $super+d exec --no-startup-id "rofi -combi-modi drun,run -show combi"
 bindsym $super+Tab exec --no-startup-id rofi -show window
 
 # common apps keybinds
-bindsym Print exec scrot 'Cheese_%a-%d%b%y_%H.%M.png' -e 'viewnior ~/$f'
+bindsym Print exec flameshot full -p ~/Pictures/Screenshots/
 bindsym $super+l exec i3lock -i ~/.Pictures/Wallpapers/.wallpaper.png
 bindsym $super+Shift+w exec google-chrome-stable
-bindsym $super+Shift+f exec nautilus
+bindsym $super+Shift+f exec pcmanfm
 bindsym $super+Shift+g exec mousepad
 bindsym $super+x exec scrcpy --fullscreen
 
 #Brightness Control
 bindsym XF86MonBrightnessUp exec xbacklight +5
 bindsym XF86MonBrightnessDown exec xbacklight -5
+
 #change volume
 bindsym XF86AudioRaiseVolume exec amixer -q set Master 5%+
 bindsym XF86AudioLowerVolume exec amixer -q set Master 5%-
@@ -71,7 +73,7 @@ bindsym $super+v split v
 bindsym $super+f fullscreen toggle
 
 # change container layout split
-bindsym $super+s layout toggle split
+bindsym $super+s layout toggle splitf
 
 # toggle tiling / floating
 bindsym $super+space floating toggle
@@ -110,6 +112,7 @@ mode "resize" {
         bindsym Up resize shrink height 5 px or 5 ppt
         bindsym Right resize grow width 5 px or 5 ppt
         bindsym Return mode "default"
+        bindsym $super+r mode "default"
 }
 bindsym $super+r mode "resize"
 
@@ -131,13 +134,13 @@ bar {
 
 # window rules, you can find the window class using xprop
 for_window [class=".*"] border pixel 4
-assign [class=URxvt] 1
-assign [class=Firefox|Transmission-gtk] 2
-assign [class=Thunar|File-roller] 3
+assign [class=termite] 1
+assign [class=google-chrome-stable|Transmission-gtk] 2
+assign [class=pcmanfm|File-roller] 3
 assign [class=Geany|Evince|Gucharmap|Soffice|libreoffice*] 4
 assign [class=Audacity|Vlc|mpv|Ghb|Xfburn|Gimp*|Inkscape] 5
 assign [class=Lxappearance|System-config-printer.py|Lxtask|GParted|Pavucontrol|Exo-helper*|Lxrandr|Arandr] 6
-for_window [class=Viewnior|feh|Audacious|File-roller|Lxappearance|Lxtask|Pavucontrol] floating enable
+for_window [class=Viewnior|feh|Audacious|File-roller|Lxappearance|Lxtask|Pavucontrol|jetbrains-studio] floating enable
 for_window [class=URxvt|Firefox|Geany|Evince|Soffice|libreoffice*|mpv|Ghb|Xfburn|Gimp*|Inkscape|Vlc|Lxappearance|Audacity] focus
 for_window [class=Xfburn|GParted|System-config-printer.py|Lxtask|Pavucontrol|Exo-helper*|Lxrandr|Arandr] focus
 
