--- a/.config/i3/config
+++ b/.config/i3/config
@@ -104,7 +104,7 @@ bindsym $super+Shift+6 move container to workspace 6
 bindsym $super+Shift+r restart
 
 # exit i3
-bindsym $super+q exec "i3-nagbar -t warning -m 'Hey Dhiraj. End is a part of journey, still want to exit?' -b 'Yes' 'i3-msg exit'"
+bindsym $super+q exec rofi -show power-menu -modi power-menu:rofi-power-menu
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -120,15 +120,15 @@ bindsym $super+r mode "resize"
 # panel
 bar {
         colors {
-        background #2f343f
-        statusline #2f343f
+        background #1c1c1c
+        statusline #1c1c1c
         separator #4b5262
 
         # colour of border, background, and text
-        focused_workspace       #2f343f #bf616a #d8dee8
-        active_workspace        #2f343f #2f343f #d8dee8
-        inactive_workspace      #2f343f #2f343f #d8dee8
-        urgent_workspacei       #2f343f #ebcb8b #2f343f
+        focused_workspace       #1c1c1c #bf616a #d8dee8
+        active_workspace        #1c1c1c #1c1c1c #d8dee8
+        inactive_workspace      #1c1c1c #1c1c1c #d8dee8
+        urgent_workspacei       #1c1c1c #ebcb8b #1c1c1c
     }
         status_command i3status
 }
@@ -146,9 +146,9 @@ for_window [class=URxvt|Firefox|Geany|Evince|Soffice|libreoffice*|mpv|Ghb|Xfburn
 for_window [class=Xfburn|GParted|System-config-printer.py|Lxtask|Pavucontrol|Exo-helper*|Lxrandr|Arandr] focus
 
 # colour of border, background, text, indicator, and child_border
-client.focused              #bf616a #2f343f #d8dee8 #bf616a #d8dee8
-client.focused_inactive     #2f343f #2f343f #d8dee8 #2f343f #2f343f
-client.unfocused            #2f343f #2f343f #d8dee8 #2f343f #2f343f
-client.urgent               #2f343f #2f343f #d8dee8 #2f343f #2f343f
-client.placeholder          #2f343f #2f343f #d8dee8 #2f343f #2f343f
-client.background           #2f343f
+client.focused              #bf616a #1c1c1c #d8dee8 #bf616a #d8dee8
+client.focused_inactive     #1c1c1c #1c1c1c #d8dee8 #1c1c1c #1c1c1c
+client.unfocused            #1c1c1c #1c1c1c #d8dee8 #1c1c1c #1c1c1c
+client.urgent               #1c1c1c #1c1c1c #d8dee8 #1c1c1c #1c1c1c
+client.placeholder          #1c1c1c #1c1c1c #d8dee8 #1c1c1c #1c1c1c
+client.background           #1c1c1c
