--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -7,28 +7,28 @@ general {
 
 order += "cpu_temperature 0"
 order += "load"
-order += "wireless wlo1"
+order += "wireless wlan0"
 order += "volume master"
 order += "battery 1"
 order += "tztime local"
 
 cpu_temperature 0 {
-        format = "<span background='#ff5555'>   🌡️   </span><span background='#e5e9f0'> %degrees °C </span>"
+        format = "<span background='#ff5555'>      </span><span background='#e5e9f0'> %degrees °C </span>"
         path = "/sys/class/thermal/thermal_zone0/temp"
 }
 
 load {
-        format = "<span background='#50fa7b'>   💻   </span><span background='#e5e9f0'> %5min Load </span>"
+        format = "<span background='#50fa7b'>      </span><span background='#e5e9f0'> %5min Load </span>"
 }
 
-wireless wlo1 {
-        format_up = "<span background='#bd93f9'>   🖧   </span><span background='#e5e9f0'> %essid </span>"
-        format_down = "<span background='#bd93f9'>   🖧   </span><span background='#e5e9f0'> Disconnected </span>"
+wireless wlan0 {
+        format_up = "<span background='#bd93f9'>      </span><span background='#e5e9f0'> %essid </span>"
+        format_down = "<span background='#bd93f9'>   睊   </span><span background='#e5e9f0'> Disconnected </span>"
 }
 
 volume master {
-        format = "<span background='#ff79c6'>   🔊   </span><span background='#e5e9f0'> %volume </span>"
-        format_muted = "<span background='#ff79c6'>   🔈   </span><span background='#e5e9f0'> Muted </span>"
+        format = "<span background='#ff79c6'>      </span><span background='#e5e9f0'> %volume </span>"
+        format_muted = "<span background='#ff79c6'>      </span><span background='#e5e9f0'> Muted </span>"
         device = "default"
         mixer = "Master"
         mixer_idx = 0
@@ -36,7 +36,7 @@ volume master {
 
 battery 1 {
 	last_full_capacity = true
-        format = "<span background='#a3be8c'>   ⚡   </span><span background='#e5e9f0'> %status %percentage </span>"
+        format = "<span background='#a3be8c'>      </span><span background='#e5e9f0'> %status %percentage </span>"
         format_down = "No Battery"
         status_chr = "Charging"
         status_bat = "Battery"
@@ -47,7 +47,7 @@ battery 1 {
 }
 
 tztime local {
-		format = "<span background='#8be9fd'>   ⏲   </span><span background='#e5e9f0'> %time </span>"
+		format = "<span background='#8be9fd'>      </span><span background='#e5e9f0'> %time </span>"
 		format_time = "%a %-d %b %H:%M"
 }
 
